--- a/00_frontend-edumeet/package.json
+++ b/00_frontend-edumeet/package.json
@@ -4,20 +4,41 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite",
+    "server": "cd 01_backend-edumeet && npm run dev",
+    "dev": "concurrently -n \"frontend,backend\" -c \"bgBlack,bgYellow\" \"npm start\" \"npm run server\""
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.3.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "clsx": "^2.1.1",
+    "concurrently": "^9.1.0",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-otp-input": "^3.1.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "react-scroll": "^1.9.0"
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-super-responsive-table": "^6.0.0",
+    "react-type-animation": "^3.2.0",
+    "swiper": "^11.1.14",
+    "video-react": "^0.16.0",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
