--- a/00_frontend-edumeet/package.json
+++ b/00_frontend-edumeet/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^9.1.0",
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.11.11",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
