--- a/00_frontend-edumeet/package.json
+++ b/00_frontend-edumeet/package.json
@@ -35,7 +35,9 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slidedown": "^2.4.7",
     "react-super-responsive-table": "^6.0.0",
+    "react-top-loading-bar": "^2.3.1",
     "react-type-animation": "^3.2.0",
     "swiper": "^11.1.14",
     "video-react": "^0.16.0",
