--- a/00_frontend-edumeet/package.json
+++ b/00_frontend-edumeet/package.json
@@ -12,6 +12,7 @@
     "dev": "concurrently -n \"frontend,backend\" -c \"bgBlack,bgYellow\" \"npm start\" \"npm run server\""
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
@@ -39,6 +40,7 @@
     "react-super-responsive-table": "^6.0.0",
     "react-top-loading-bar": "^2.3.1",
     "react-type-animation": "^3.2.0",
+    "redux-toolkit": "^1.1.2",
     "swiper": "^11.1.14",
     "video-react": "^0.16.0",
     "web-vitals": "^4.2.4"
